Modified frame border

--- a/var_www_html/index.html
+++ b/var_www_html/index.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>薫製コントローラ</title>
 	</head>
-	<frameset rows="520,*">
-		<frameset cols="680,*">
+	<frameset rows="520,*" frameborder="0">
+		<frameset cols="680,*" frameborder="0">
 			<frame src="video.html" name="video" title="video">
 			<frame src="cgi-bin/inquire.py" name="status" title="status">
 
